feat(analytics-js): clean up plugins, add plugin manager implemntation

--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -37,7 +37,7 @@
       rudderanalytics.load('__WRITE_KEY__', '__DATAPLANE_URL__', {
         logLevel: 'DEBUG',
         configUrl: '__CONFIG_SERVER_HOST__',
-        destSDKBaseURL: '__DEST_SDK_BASE_URL__',
+        destSDKBaseURL: '__DEST_SDK_BASE_URL__'
       });
 
       rudderanalytics.identify(
