--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <script>
+      // TODO: use detection to determine of should load legacy or modern package
       rudderanalytics = window.rudderanalytics = [];
       var methods = [
         'setDefaultInstanceKey',
@@ -117,7 +118,7 @@
 
       // TODO: Call other APIs here
     </script>
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=URLSearchParams%2CURL%2CMutationObserver%2CArray.from%2CArray.prototype.find%2CArray.prototype.includes%2CPromise%2CString.prototype.endsWith%2CString.prototype.includes%2CString.prototype.startsWith%2CObject.entries%2CObject.values%2CElement.prototype.dataset%2CString.prototype.replaceAll"></script>
+<!--    <script src="https://polyfill.io/v3/polyfill.min.js?features=URLSearchParams%2CURL%2CMutationObserver%2CArray.from%2CArray.prototype.find%2CArray.prototype.includes%2CPromise%2CString.prototype.endsWith%2CString.prototype.includes%2CString.prototype.startsWith%2CObject.entries%2CObject.values%2CElement.prototype.dataset%2CString.prototype.replaceAll"></script>-->
   </head>
   <body>
     <h1>Page Loaded</h1>
