--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -38,7 +38,8 @@
       rudderanalytics.load('__WRITE_KEY__', '__DATAPLANE_URL__', {
         logLevel: 'DEBUG',
         configUrl: '__CONFIG_SERVER_HOST__',
-        destSDKBaseURL: '__DEST_SDK_BASE_URL__'
+        destSDKBaseURL: '__DEST_SDK_BASE_URL__',
+        pluginsSDKBaseURL: '__PLUGINS_BASE_URL__'
       });
 
       rudderanalytics.identify(
