--- a/sanity-suite/public/index-local.html
+++ b/sanity-suite/public/index-local.html
@@ -106,8 +106,8 @@
 </head>
 <body>
 
-<div class="container-xl">
-    <div class="row">
+<div class="container-xxl">
+    <div class="row ow px-4">
         <div class="col" id="testBook">
         </div>
     </div>
