--- a/sanity-suite/public/index-npm.html
+++ b/sanity-suite/public/index-npm.html
@@ -82,8 +82,8 @@
     </style>
   </head>
   <body>
-    <div class="container-xl">
-      <div class="row">
+    <div class="container-xxl">
+      <div class="row ow px-4">
         <div class="col" id="testBook"></div>
       </div>
     </div>
