--- a/sanity-suite/public/preloadBuffer/index-cdn.html
+++ b/sanity-suite/public/preloadBuffer/index-cdn.html
@@ -102,8 +102,8 @@
     ></script>
   </head>
   <body>
-    <div class="container-xl">
-      <div class="row">
+    <div class="container-xxl">
+      <div class="row ow px-4">
         <div class="col" id="testBook"></div>
       </div>
     </div>
