--- a/examples/v3/index.html
+++ b/examples/v3/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
+    <title>RudderStack JS SDK v3 Example</title>
     <script>
-      // TODO: use detection to determine of should load legacy or modern package
       rudderanalytics = window.rudderanalytics = [];
       var methods = [
         'setDefaultInstanceKey',
@@ -46,13 +46,12 @@
       window.rudderAnalyticsScript = document.createElement('script');
       rudderAnalyticsScript.src = rudderAnalyticsBaseUrl + '/rudder-analytics.min.js';
       rudderAnalyticsScript.async = true;
-      // document.head.appendChild(rudderAnalyticsScript);
 
-      rudderanalytics.load('__WRITE_KEY__', '__DATAPLANE_URL__', {
+      rudderanalytics.load('2L8Fl7ryPss3Zku133Pj5ox7NeP', 'https://rudderstacpn.dataplane.rudderstack.com', {
         logLevel: 'DEBUG',
-        configUrl: '__CONFIG_SERVER_HOST__',
-        destSDKBaseURL: '__DEST_SDK_BASE_URL__',
-        pluginsSDKBaseURL: '__PLUGINS_BASE_URL__'
+        configUrl: 'https://api.rudderlabs.com',
+        destSDKBaseURL: rudderAnalyticsBaseUrl + '/js-integrations',
+        pluginsSDKBaseURL: rudderAnalyticsBaseUrl + '/plugins'
       });
 
       rudderanalytics.identify(
@@ -70,8 +69,8 @@
           street: 'Sample Address',
           state: 'TX',
         },
-        function() {
-          console.log('in identify call');
+        function(message) {
+          console.log('in identify call', message);
         },
       );
 
@@ -85,8 +84,8 @@
           title: '',
           url: '',
         },
-        function() {
-          console.log('in page call');
+        function(message) {
+          console.log('in page call', message);
         },
       );
 
@@ -97,8 +96,8 @@
           currency: 'USD',
           user_actual_id: 12345,
         },
-        function() {
-          console.log('in track call 1');
+        function(message) {
+          console.log('in track call 1', message);
         },
       );
 
@@ -109,8 +108,8 @@
           currency: 'INR',
           user_actual_id: 333,
         },
-        function() {
-          console.log('in track call 2');
+        function(message) {
+          console.log('in track call 2', message);
         },
       );
 
@@ -121,8 +120,8 @@
           currency: 'EUR',
           user_actual_id: 5678,
         },
-        function() {
-          console.log('in track call 3');
+        function(message) {
+          console.log('in track call 3', message);
         },
       );
 
@@ -132,6 +131,29 @@
 
       // TODO: Call other APIs here
     </script>
+
+    <!-- ============ V1 ============ -->
+    <!-- <script src="https://cdn.rudderlabs.com/v1/rudder-analytics.min.js"></script> -->
+    <!-- <script src="https://cdn.rudderlabs.com/v1/staging/rudder-analytics-staging.min.js"></script> -->
+    <!-- ============ V1 ============ -->
+
+    <!-- ============ V1.1 ============ -->
+    <!-- <script src="https://cdn.rudderlabs.com/v1.1/rudder-analytics.min.js"></script> -->
+    <!-- <script src="https://cdn.rudderlabs.com/v1.1/staging/rudder-analytics-staging.min.js"></script> -->
+    <!-- ============ V1.1 ============ -->
+
+    <!-- ============ V2 ============ -->
+    <!-- <script src="https://cdn.rudderlabs.com/v2/rudder-analytics.min.js?transport=beacon"></script> -->
+    <!-- <script src="https://cdn.rudderlabs.com/v2/rudder-analytics.min.js?transport=beacon&autotrack=true"></script> -->
+    <!-- ============ V2 ============ -->
+
+    <!-- ============ V3 ============ -->
+    <script>
+      document.head.appendChild(rudderAnalyticsScript);
+    </script>
+    <!--    <script src="https://cdn.rudderlabs.com/beta/v3/modern/rudder-analytics.min.js"></script>-->
+    <!-- ============ V3 ============ -->
+
   </head>
   <body>
     <h1>Page Loaded</h1>
