--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -41,86 +41,108 @@
         destSDKBaseURL: '__DEST_SDK_BASE_URL__'
       });
 
-      rudderanalytics.identify(
-        'customUserID',
-        {
-          name: 'John Doe',
-          title: 'CEO',
-          email: 'name.surname@domain.com',
-          company: 'Company123',
-          phone: '123-456-7890',
-          rating: 'Hot',
-          city: 'Austin',
-          postalCode: '12345',
-          country: 'US',
-          street: 'Sample Address',
-          state: 'TX',
-        },
-        function() {
-          console.log('in identify call');
-        },
-      );
-
-      rudderanalytics.page(
-        'Home',
-        'Cart Viewed',
-        {
-          path: '',
-          referrer: '',
-          search: '',
-          title: '',
-          url: '',
-        },
-        function() {
-          console.log('in page call');
-        },
-      );
-
-      rudderanalytics.track(
-        'test track event 1',
-        {
-          revenue: 30,
-          currency: 'USD',
-          user_actual_id: 12345,
-        },
-        function() {
-          console.log('in track call 1');
-        },
-      );
-
-      rudderanalytics.track(
-        'test track event 2',
-        {
-          revenue: 45,
-          currency: 'INR',
-          user_actual_id: 333,
-        },
-        function() {
-          console.log('in track call 2');
-        },
-      );
-
-      rudderanalytics.track(
-        'test track event 3',
-        {
-          revenue: 10003,
-          currency: 'EUR',
-          user_actual_id: 5678,
-        },
-        function() {
-          console.log('in track call 3');
-        },
-      );
+      rudderanalytics.page();
 
       rudderanalytics.ready(function() {
         console.log('All ready!!!');
       });
-
-      // TODO: Call other APIs here
     </script>
-<!--    <script src="https://polyfill.io/v3/polyfill.min.js?features=URLSearchParams%2CURL%2CMutationObserver%2CArray.from%2CArray.prototype.find%2CArray.prototype.includes%2CPromise%2CString.prototype.endsWith%2CString.prototype.includes%2CString.prototype.startsWith%2CObject.entries%2CObject.values%2CElement.prototype.dataset%2CString.prototype.replaceAll"></script>-->
   </head>
   <body>
-    <h1>Page Loaded</h1>
+    <h1>Test HTML file</h1>
+    <br />
+
+    <button data-testid="page-btn" onclick="page()">Page</button>
+    <button data-testid="identify-btn" onclick="identify()">identify</button>
+    <button data-testid="track-btn" onclick="track()">Track</button>
+    <button data-testid="alias-btn" onclick="alias()">Alias</button>
+    <button data-testid="group-btn" onclick="group()">Group</button>
+
+    <p data-testid="action" id="action"></p>
+    <p data-testid="payload" id="rudderElement"></p>
+
+    <script>
+      function page() {
+        rudderanalytics.page(
+          'Home',
+          'Cart Viewed',
+          {
+            path: '',
+            referrer: '',
+            search: '',
+            title: '',
+            url: '',
+          },
+          rudderElement => {
+            console.log('in page call');
+            document.getElementById('action').innerHTML = 'Page called';
+            document.getElementById('rudderElement').innerHTML = JSON.stringify(rudderElement);
+        });
+      }
+
+      function identify() {
+        rudderanalytics.identify(
+          'customUserID',
+          {
+            name: 'John Doe',
+            title: 'CEO',
+            email: 'name.surname@domain.com',
+            company: 'Company123',
+            phone: '123-456-7890',
+            rating: 'Hot',
+            city: 'Austin',
+            postalCode: '12345',
+            country: 'US',
+            street: 'Sample Address',
+            state: 'TX',
+          },
+          {},
+          rudderElement => {
+            console.log('in identify call');
+            document.getElementById('action').innerHTML = 'Identify called';
+            document.getElementById('rudderElement').innerHTML = JSON.stringify(rudderElement);
+          },
+        );
+      }
+
+      function track() {
+        rudderanalytics.track(
+          'test track event 1',
+          {
+            revenue: 30,
+            currency: 'USD',
+            user_actual_id: 12345,
+          },
+          rudderElement => {
+            console.log('in track call');
+            document.getElementById('action').innerHTML = 'Track called';
+            document.getElementById('rudderElement').innerHTML = JSON.stringify(rudderElement);
+          },
+        );
+      }
+
+      function alias() {
+        rudderanalytics.alias('alias-user-id', rudderElement => {
+          console.log('alias call');
+          document.getElementById('action').innerHTML = 'Alias called';
+          document.getElementById('rudderElement').innerHTML = JSON.stringify(rudderElement);
+        });
+      }
+
+      function group() {
+        rudderanalytics.group(
+          'sample_group_id',
+          {
+            name: 'Apple Inc.',
+            location: 'USA',
+          },
+          rudderElement => {
+            console.log('group call');
+            document.getElementById('action').innerHTML = 'Group called';
+            document.getElementById('rudderElement').innerHTML = JSON.stringify(rudderElement);
+          },
+        );
+      }
+    </script>
   </body>
 </html>
