--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -23,7 +23,7 @@
         'startSession',
         'endSession',
         'getSessionId',
-        'getSessionInfo'
+        'getSessionInfo',
       ];
 
       for (var i = 0; i < methods.length; i++) {
@@ -38,12 +38,12 @@
       rudderanalytics.load('__WRITE_KEY__', '__DATAPLANE_URL__', {
         logLevel: 'DEBUG',
         configUrl: '__CONFIG_SERVER_HOST__',
-        destSDKBaseURL: '__DEST_SDK_BASE_URL__'
+        destSDKBaseURL: '__DEST_SDK_BASE_URL__',
       });
 
       rudderanalytics.page();
 
-      rudderanalytics.ready(function() {
+      rudderanalytics.ready(function () {
         console.log('All ready!!!');
       });
     </script>
@@ -77,7 +77,8 @@
             console.log('in page call');
             document.getElementById('action').innerHTML = 'Page called';
             document.getElementById('rudderElement').innerHTML = JSON.stringify(rudderElement);
-        });
+          },
+        );
       }
 
       function identify() {
