--- a/examples/v3/index.html
+++ b/examples/v3/index.html
@@ -68,7 +68,7 @@
       }
       // New addition to load script ends
 
-      rudderanalytics.load('<writeKey>', '<dataplaneUrl>', {
+      rudderanalytics.load('2L8Fl7ryPss3Zku133Pj5ox7NeP', 'https://rudderstacpn.dataplane.rudderstack.com', {
         logLevel: 'DEBUG',
         configUrl: 'https://api.rudderlabs.com',
         destSDKBaseURL: rudderCdnBaseUrlHost + sdkBuildType + '/js-integrations',
@@ -161,5 +161,103 @@
   </head>
   <body>
     <h1>Page Loaded</h1>
+    <br />
+
+    <button data-testid="page-btn" onclick="page()">Page</button>
+    <button data-testid="identify-btn" onclick="identify()">identify</button>
+    <button data-testid="track-btn" onclick="track()">Track</button>
+    <button data-testid="alias-btn" onclick="alias()">Alias</button>
+    <button data-testid="group-btn" onclick="group()">Group</button>
+
+    <p data-testid="action" id="action"></p>
+    <p data-testid="payload" id="rudderElement"></p>
+
+    <script>
+      function page() {
+        rudderanalytics.page(
+          'Home',
+          'Cart Viewed',
+          {
+            path: '',
+            referrer: '',
+            search: '',
+            title: '',
+            url: '',
+          },
+          function(rudderElement) {
+            console.log('in page call');
+            document.getElementById('action').innerHTML = 'Page called';
+            document.getElementById('rudderElement').innerHTML = JSON.stringify(rudderElement);
+          }
+        );
+      }
+
+      function identify() {
+        rudderanalytics.identify(
+          'customUserID',
+          {
+            name: 'John Doe',
+            title: 'CEO',
+            email: 'name.surname@domain.com',
+            company: 'Company123',
+            phone: '123-456-7890',
+            rating: 'Hot',
+            city: 'Austin',
+            postalCode: '12345',
+            country: 'US',
+            street: 'Sample Address',
+            state: 'TX',
+          },
+          {},
+          function(rudderElement) {
+            console.log('in identify call');
+            document.getElementById('action').innerHTML = 'Identify called';
+            document.getElementById('rudderElement').innerHTML = JSON.stringify(rudderElement);
+          }
+        );
+      }
+
+      function track() {
+        rudderanalytics.track(
+          'test track event 1',
+          {
+            revenue: 30,
+            currency: 'USD',
+            user_actual_id: 12345,
+          },
+          function(rudderElement) {
+            console.log('in track call');
+            document.getElementById('action').innerHTML = 'Track called';
+            document.getElementById('rudderElement').innerHTML = JSON.stringify(rudderElement);
+          }
+        );
+      }
+
+      function alias() {
+        rudderanalytics.alias(
+          'alias-user-id',
+          function(rudderElement) {
+            console.log('alias call');
+            document.getElementById('action').innerHTML = 'Alias called';
+            document.getElementById('rudderElement').innerHTML = JSON.stringify(rudderElement);
+          }
+        );
+      }
+
+      function group() {
+        rudderanalytics.group(
+          'sample_group_id',
+          {
+            name: 'Apple Inc.',
+            location: 'USA',
+          },
+          function(rudderElement) {
+            console.log('group call');
+            document.getElementById('action').innerHTML = 'Group called';
+            document.getElementById('rudderElement').innerHTML = JSON.stringify(rudderElement);
+          }
+        );
+      }
+    </script>
   </body>
 </html>
