--- a/packages/sanity-suite/public/v3/preloadBuffer/index-cdn.html
+++ b/packages/sanity-suite/public/v3/preloadBuffer/index-cdn.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>RudderStack JS SDK Sanity Suite</title>
+    <title>RudderStack JS SDK v3 Sanity Suite</title>
 
     <script>
       window.OneTrust = {
@@ -21,18 +21,15 @@
         }
       };
       window.OnetrustActiveGroups = ',C0001,C0003,';
-
       rudderanalytics = window.rudderanalytics = [];
       var methods = [
-        'setDefaultInstanceKey',
-        'getAnalyticsInstance',
         'load',
-        'ready',
         'page',
         'track',
         'identify',
         'alias',
         'group',
+        'ready',
         'reset',
         'getAnonymousId',
         'setAnonymousId',
@@ -40,10 +37,8 @@
         'getUserTraits',
         'getGroupId',
         'getGroupTraits',
-        'startSession',
         'endSession',
-        'getSessionId',
-        'getSessionInfo'
+        'startSession',
       ];
 
       for (var i = 0; i < methods.length; i++) {
@@ -55,51 +50,18 @@
         })(method);
       }
 
-      // New addition to load script starts
-      var sdkBuildType = 'legacy';
-
-      try {
-        // Feature detection of dynamic imports
-        new Function('return import("")');
-        sdkBuildType = 'modern';
-      } catch (e) {
-      }
-
-      var rudderCdnBaseUrlHost = 'https://cdn.rudderlabs.com/beta/v3/'
-      var rudderAnalyticsBaseUrl = rudderCdnBaseUrlHost + sdkBuildType;
-      var rudderAnalyticsMount = function() {
-        var rudderAnalyticsScript = document.createElement('script');
-        rudderAnalyticsScript.src = rudderAnalyticsBaseUrl + '/rudder-analytics.min.js';
-        rudderAnalyticsScript.async = true;
-        rudderAnalyticsScript.defer = true;
-        document.head.appendChild(rudderAnalyticsScript);
-      };
-
-      // Feature detection of Promise
-      if(typeof Promise === 'undefined') {
-        var rudderAnalyticsPromisesScript = document.createElement('script');
-        rudderAnalyticsPromisesScript.src = 'https://polyfill.io/v3/polyfill.min.js?features=Promise&callback=rudderAnalyticsMount';
-        rudderAnalyticsPromisesScript.async = true;
-        rudderAnalyticsPromisesScript.defer = true;
-        document.head.appendChild(rudderAnalyticsPromisesScript);
-      } else {
-        rudderAnalyticsMount();
-      }
-      // New addition to load script ends
-
-      rudderanalytics.load('__WRITE_KEY__', '__DATAPLANE_URL__', {
+      rudderanalytics.load('__FEATURE_PRELOAD_BUFFER_WRITE_KEY__', '__DATAPLANE_URL__', {
         logLevel: 'DEBUG',
         configUrl: '__CONFIG_SERVER_HOST__',
-        destSDKBaseURL: rudderCdnBaseUrlHost + sdkBuildType + '/js-integrations',
-        pluginsSDKBaseURL: rudderCdnBaseUrlHost + sdkBuildType + '/plugins',
+        destSDKBaseURL: '__DEST_SDK_BASE_URL__',
         cookieConsentManager: {
-          oneTrust: {
-            enabled: true,
-          },
-        },
+            oneTrust: {
+                enabled: true,
+            }
+        }
       });
 
-      rudderanalytics.ready(function () {
+      rudderanalytics.ready(function() {
         console.log('We are all set!!!');
       });
     </script>
@@ -107,19 +69,25 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
       integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
-      crossorigin="anonymous" />
+      crossorigin="anonymous"
+    />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" />
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
+    />
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"></script>
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
-      crossorigin="anonymous"></script>
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=MutationObserver%2CArray.from%2CArray.prototype.find%2CArray.prototype.includes%2CPromise%2CString.prototype.endsWith%2CString.prototype.includes%2CString.prototype.startsWith%2CObject.entries%2CObject.values%2CElement.prototype.dataset%2CString.prototype.replaceAll"></script>
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://polyfill.io/v3/polyfill.min.js?features=MutationObserver%2CArray.from%2CArray.prototype.find%2CArray.prototype.includes%2CPromise%2CString.prototype.endsWith%2CString.prototype.includes%2CString.prototype.startsWith%2CObject.entries%2CObject.values%2CElement.prototype.dataset%2CString.prototype.replaceAll"
+    ></script>
     <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.10/dist/clipboard.min.js"></script>
     <style>
       .collapsed-row pre {
@@ -128,9 +96,10 @@
       }
     </style>
 
-<!--    <script-->
-<!--      async-->
-<!--      src="https://cdn.rudderlabs.com/__CDN_VERSION_PATH__rudder-analytics__STAGING_FILE_PATH__.min.js"></script>-->
+    <script
+      async
+      src="https://cdn.rudderlabs.com/__CDN_VERSION_PATH__rudder-analytics__STAGING_FILE_PATH__.min.js"
+    ></script>
   </head>
   <body>
     <div class="container-xxl">
