fix(analytics-js): issues after running sanity suite

--- a/examples/v3-legacy/index.html
+++ b/examples/v3-legacy/index.html
@@ -42,12 +42,12 @@
       // New addition to load script starts
       var sdkBuildType = 'legacy';
 
-      try {
-        // Feature detection of dynamic imports
-        new Function('return import("")');
-        sdkBuildType = 'modern';
-      } catch (e) {
-      }
+      // try {
+      //   // Feature detection of dynamic imports
+      //   new Function('return import("")');
+      //   sdkBuildType = 'modern';
+      // } catch (e) {
+      // }
 
       var rudderCdnBaseUrlHost = 'https://cdn.rudderlabs.com/beta/v3/'
       var rudderAnalyticsBaseUrl = rudderCdnBaseUrlHost + sdkBuildType;
@@ -71,16 +71,12 @@
       }
       // New addition to load script ends
 
-      rudderanalytics.load(
-        '__WRITE_KEY__',
-        '__DATAPLANE_URL__',
-        {
-          logLevel: 'DEBUG',
-          configUrl: 'https://api.rudderlabs.com',
-          destSDKBaseURL: rudderCdnBaseUrlHost + sdkBuildType + '/js-integrations',
-          pluginsSDKBaseURL: rudderCdnBaseUrlHost + sdkBuildType + '/plugins'
-        }
-      );
+      rudderanalytics.load('2L8Fl7ryPss3Zku133Pj5ox7NeP', 'https://rudderstacpn.dataplane.rudderstack.com', {
+        logLevel: 'DEBUG',
+        configUrl: 'https://api.rudderlabs.com',
+        destSDKBaseURL: rudderCdnBaseUrlHost + sdkBuildType + '/js-integrations',
+        pluginsSDKBaseURL: rudderCdnBaseUrlHost + sdkBuildType + '/plugins'
+      });
 
       rudderanalytics.identify(
         'customUserID',
