--- a/examples/v1/index.html
+++ b/examples/v1/index.html
@@ -4,7 +4,7 @@
     <meta charSet="utf-8"/>
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <title>RudderStack JS SDK v1.1 Example</title>
+    <title>RudderStack JS SDK v1 Example</title>
     <script>
       rudderanalytics = window.rudderanalytics = [];
       var methods = [
@@ -40,8 +40,8 @@
       }
 
       rudderanalytics.load(
-        '__WRITE_KEY__',
-        '__DATAPLANE_URL__',
+        '2L8Fl7ryPss3Zku133Pj5ox7NeP',
+        'https://rudderstacpn.dataplane.rudderstack.com',
         {
           logLevel: 'DEBUG'
         }
@@ -125,10 +125,10 @@
       // TODO: Call other APIs here
     </script>
 
-    <!-- ============ V1.1 ============ -->
-    <script src="https://cdn.rudderlabs.com/v1.1/rudder-analytics.min.js"></script>
-    <!-- <script src="https://cdn.rudderlabs.com/v1.1/staging/rudder-analytics-staging.min.js"></script> -->
-    <!-- ============ V1.1 ============ -->
+    <!-- ============ V1 ============ -->
+    <script src="https://cdn.rudderlabs.com/v1/rudder-analytics.min.js"></script>
+    <!-- <script src="https://cdn.rudderlabs.com/v1/staging/rudder-analytics-staging.min.js"></script> -->
+    <!-- ============ V1 ============ -->
   </head>
   <body>
   <h1>Page Loaded</h1>
