--- a/examples/v2-beacon/index.html
+++ b/examples/v2-beacon/index.html
@@ -40,8 +40,8 @@
       }
 
       rudderanalytics.load(
-        '__WRITE_KEY__',
-        '__DATAPLANE_URL__',
+        '2L8Fl7ryPss3Zku133Pj5ox7NeP',
+        'https://rudderstacpn.dataplane.rudderstack.com',
         {
           logLevel: 'DEBUG'
         }
@@ -125,10 +125,10 @@
       // TODO: Call other APIs here
     </script>
 
-    <!-- ============ V1.1 ============ -->
-    <script src="https://cdn.rudderlabs.com/v1.1/rudder-analytics.min.js"></script>
-    <!-- <script src="https://cdn.rudderlabs.com/v1.1/staging/rudder-analytics-staging.min.js"></script> -->
-    <!-- ============ V1.1 ============ -->
+    <!-- ============ V2 ============ -->
+    <script src="https://cdn.rudderlabs.com/v2/rudder-analytics.min.js?transport=beacon"></script>
+    <!-- <script src="https://cdn.rudderlabs.com/v2/rudder-analytics.min.js?transport=beacon&autotrack=true"></script> -->
+    <!-- ============ V2 ============ -->
   </head>
   <body>
   <h1>Page Loaded</h1>
