fix(monorepo): remove hardcoded writekeys from examples

--- a/examples/v3-legacy/index.html
+++ b/examples/v3-legacy/index.html
@@ -71,7 +71,7 @@
       }
       // New addition to load script ends
 
-      rudderanalytics.load('2L8Fl7ryPss3Zku133Pj5ox7NeP', 'https://rudderstacpn.dataplane.rudderstack.com', {
+      rudderanalytics.load('__WRITE_KEY__', '__DATAPLANE_URL__', {
         logLevel: 'DEBUG',
         configUrl: 'https://api.rudderlabs.com',
         destSDKBaseURL: rudderCdnBaseUrlHost + sdkBuildType + '/js-integrations',
