--- a/examples/v2-beacon/index.html
+++ b/examples/v2-beacon/index.html
@@ -40,8 +40,8 @@
       }
 
       rudderanalytics.load(
-        '2L8Fl7ryPss3Zku133Pj5ox7NeP',
-        'https://rudderstacpn.dataplane.rudderstack.com',
+        '__WRITE_KEY__',
+        '__DATAPLANE_URL__',
         {
           logLevel: 'DEBUG'
         }
