--- a/packages/sanity-suite/public/v3/index-cdn.html
+++ b/packages/sanity-suite/public/v3/index-cdn.html
@@ -126,6 +126,11 @@
         height: 124px;
         overflow: hidden;
       }
+
+      .collapsed-row .table-heading pre {
+        height: 0px;
+        overflow: hidden;
+      }
     </style>
 
 <!--    <script-->
