--- a/packages/sanity-suite/public/v3/index-cdn.html
+++ b/packages/sanity-suite/public/v3/index-cdn.html
@@ -86,6 +86,18 @@
         rudderAnalyticsMount();
       }
       // New addition to load script ends
+      // Sets the user ID/anonymous ID
+rudderanalytics.setAnonymousId("abcde");
+
+// Identify call
+rudderanalytics.identify("12345", {
+  name: "Firstname Lastname"
+});
+
+// Track call
+rudderanalytics.track("test event", {
+  testProp: "prop1"
+});
 
       rudderanalytics.load('__WRITE_KEY__', '__DATAPLANE_URL__', {
         logLevel: 'DEBUG',
