fix(analytics-js): remove sessionStart from events payload if not true

--- a/examples/v3-legacy/index.html
+++ b/examples/v3-legacy/index.html
@@ -26,8 +26,7 @@
         'getGroupTraits',
         'startSession',
         'endSession',
-        'getSessionId',
-        'getSessionInfo'
+        'getSessionId'
       ];
 
       for (var i = 0; i < methods.length; i++) {
