--- a/examples/v1.1/index.html
+++ b/examples/v1.1/index.html
@@ -24,8 +24,7 @@
         'getGroupTraits',
         'startSession',
         'endSession',
-        'getSessionId',
-        'getSessionInfo'
+        'getSessionId'
       ];
 
       for (var i = 0; i < methods.length; i++) {
