--- a/packages/sanity-suite/public/v3/index-cdn.html
+++ b/packages/sanity-suite/public/v3/index-cdn.html
@@ -42,8 +42,7 @@
         'getGroupTraits',
         'startSession',
         'endSession',
-        'getSessionId',
-        'getSessionInfo'
+        'getSessionId'
       ];
 
       for (var i = 0; i < methods.length; i++) {
