--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -23,8 +23,7 @@
         'getGroupTraits',
         'startSession',
         'endSession',
-        'getSessionId',
-        'getSessionInfo',
+        'getSessionId'
       ];
 
       for (var i = 0; i < methods.length; i++) {
