--- a/packages/sanity-suite/public/v3/index-cdn.html
+++ b/packages/sanity-suite/public/v3/index-cdn.html
@@ -42,8 +42,7 @@
         'getGroupTraits',
         'startSession',
         'endSession',
-        'getSessionId',
-        'getSessionInfo'
+        'getSessionId'
       ];
 
       for (var i = 0; i < methods.length; i++) {
@@ -78,7 +77,7 @@
       // Feature detection of Promise
       if(typeof Promise === 'undefined') {
         var rudderAnalyticsPromisesScript = document.createElement('script');
-        rudderAnalyticsPromisesScript.src = 'https://polyfill.io/v3/polyfill.min.js?features=Promise&callback=rudderAnalyticsMount';
+        rudderAnalyticsPromisesScript.src = 'https://polyfill.io/v3/polyfill.min.js?features=globalThis%2CPromise&callback=rudderAnalyticsMount';
         rudderAnalyticsPromisesScript.async = true;
         rudderAnalyticsPromisesScript.defer = true;
         document.head.appendChild(rudderAnalyticsPromisesScript);
@@ -97,7 +96,7 @@
 
         // Track call
       rudderanalytics.track("test event", {
-          testProp: "automationQA_prop1" 
+          testProp: "automationQA_prop1"
         });
       rudderanalytics.load('__WRITE_KEY__', '__DATAPLANE_URL__', {
         logLevel: 'DEBUG',
